--- a/CLXTest/test-output/old/Default suite/methods.html
+++ b/CLXTest/test-output/old/Default suite/methods.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:19:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1459794865</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:20:02</td>   <td>36300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">loginPageTitleTest</td> 
-  <td>main@1459794865</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:20:12</td>   <td>46348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1459794865</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:20:14</td>   <td>48345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1459794865</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:20:37</td>   <td>71545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clxLogoTest()[pri:2, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">clxLogoTest</td> 
-  <td>main@1459794865</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:20:47</td>   <td>82133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1459794865</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:20:49</td>   <td>83560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1459794865</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:21:11</td>   <td>105850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">loginTest</td> 
-  <td>main@1459794865</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/12/22 14:21:23</td>   <td>118045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testdata.LoginPageTest@1e88b3c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1459794865</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/23 02:54:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@42d80b78]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/23 02:55:11</td>   <td>35675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyLauncherTitleTest()[pri:0, instance:com.clx.qa.testcases.LauncherTest@42d80b78]">verifyLauncherTitleTest</td> 
+  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/23 02:55:11</td>   <td>35732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
 </table>
