--- a/CLXTest/test-output/index.html
+++ b/CLXTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse-1797739139\testng-customsuite.xml</span>
+                    <span>C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse--1795745022\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,42 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyContactManagerTest">verifyContactManagerTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyDigitalArchivalLinkTest">verifyDigitalArchivalLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyIntakeManagerLinkTest">verifyIntakeManagerLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyLauncherTitleTest">verifyLauncherTitleTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyMarketplaceTest">verifyMarketplaceTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyMatterManagerLinkTest">verifyMatterManagerLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyReferralEngineTest">verifyReferralEngineTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyUserNameTest">verifyUserNameTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.ReferralEngineTest" hash-for-method="verifyReferralEngineTest">verifyReferralEngineTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -155,51 +120,9 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.clx.qa.testcases.LauncherTest</span>
+              <span class="class-name">com.clx.qa.testcases.ReferralEngineTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyContactManagerTest">
-                  </a> <!-- verifyContactManagerTest -->
-                  <span class="method-name">verifyContactManagerTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyDigitalArchivalLinkTest">
-                  </a> <!-- verifyDigitalArchivalLinkTest -->
-                  <span class="method-name">verifyDigitalArchivalLinkTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyIntakeManagerLinkTest">
-                  </a> <!-- verifyIntakeManagerLinkTest -->
-                  <span class="method-name">verifyIntakeManagerLinkTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLauncherTitleTest">
-                  </a> <!-- verifyLauncherTitleTest -->
-                  <span class="method-name">verifyLauncherTitleTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyMarketplaceTest">
-                  </a> <!-- verifyMarketplaceTest -->
-                  <span class="method-name">verifyMarketplaceTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyMatterManagerLinkTest">
-                  </a> <!-- verifyMatterManagerLinkTest -->
-                  <span class="method-name">verifyMatterManagerLinkTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="verifyReferralEngineTest">
@@ -207,19 +130,12 @@
                   <span class="method-name">verifyReferralEngineTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyUserNameTest">
-                  </a> <!-- verifyUserNameTest -->
-                  <span class="method-name">verifyUserNameTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse-1797739139\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse--1795745022\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -228,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.clx.qa.testcases.LauncherTest&quot;/&gt;
+      &lt;class name=&quot;com.clx.qa.testcases.ReferralEngineTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -268,44 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyMatterManagerLinkTest')
-data.setCell(0, 2, 'com.clx.qa.testcases.LauncherTest')
-data.setCell(0, 3, 20197);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyMarketplaceTest')
-data.setCell(1, 2, 'com.clx.qa.testcases.LauncherTest')
-data.setCell(1, 3, 20174);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyContactManagerTest')
-data.setCell(2, 2, 'com.clx.qa.testcases.LauncherTest')
-data.setCell(2, 3, 20172);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyDigitalArchivalLinkTest')
-data.setCell(3, 2, 'com.clx.qa.testcases.LauncherTest')
-data.setCell(3, 3, 20158);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyReferralEngineTest')
-data.setCell(4, 2, 'com.clx.qa.testcases.LauncherTest')
-data.setCell(4, 3, 20157);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyIntakeManagerLinkTest')
-data.setCell(5, 2, 'com.clx.qa.testcases.LauncherTest')
-data.setCell(5, 3, 20125);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyUserNameTest')
-data.setCell(6, 2, 'com.clx.qa.testcases.LauncherTest')
-data.setCell(6, 3, 68);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'verifyLauncherTitleTest')
-data.setCell(7, 2, 'com.clx.qa.testcases.LauncherTest')
-data.setCell(7, 3, 42);
+data.setCell(0, 1, 'verifyReferralEngineTest')
+data.setCell(0, 2, 'com.clx.qa.testcases.ReferralEngineTest')
+data.setCell(0, 3, 1408);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -331,102 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.clx.qa.testcases.LauncherTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.clx.qa.testcases.ReferralEngineTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyLauncherTitleTest</span>
-                <span class="method-start">46125 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">46169 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">47238 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyUserNameTest</span>
-                <span class="method-start">82479 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">82548 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">83307 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyMatterManagerLinkTest</span>
-                <span class="method-start">124798 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">144998 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">145771 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyIntakeManagerLinkTest</span>
-                <span class="method-start">188065 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">208192 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">208939 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyDigitalArchivalLinkTest</span>
-                <span class="method-start">264362 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">284521 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">286408 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
                 <span class="method-name">verifyReferralEngineTest</span>
-                <span class="method-start">337498 ms</span>
+                <span class="method-start">47400 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">357656 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">358573 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyContactManagerTest</span>
-                <span class="method-start">402875 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">423049 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">424112 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyMarketplaceTest</span>
-                <span class="method-start">467199 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">487375 ms</span>
+                <span class="method-start">48813 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
