--- a/CLXTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/CLXTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,52 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:04:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:05:39</td>   <td>47237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:06:15</td>   <td>83306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:07:17</td>   <td>145770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:08:20</td>   <td>208938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:09:38</td>   <td>286407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:10:50</td>   <td>358572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:11:55</td>   <td>424111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:05:38</td>   <td>46168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:06:14</td>   <td>82547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:07:16</td>   <td>144997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:08:20</td>   <td>208191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:09:36</td>   <td>284520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:10:49</td>   <td>357656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:11:54</td>   <td>423048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:12:59</td>   <td>487374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:11:34</td>   <td>402874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyContactManagerTest()[pri:7, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">verifyContactManagerTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:09:16</td>   <td>264361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyDigitalArchivalLinkTest()[pri:5, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">verifyDigitalArchivalLinkTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:07:59</td>   <td>188064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyIntakeManagerLinkTest()[pri:4, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">verifyIntakeManagerLinkTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:05:37</td>   <td>46124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyLauncherTitleTest()[pri:1, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">verifyLauncherTitleTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:12:39</td>   <td>467198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyMarketplaceTest()[pri:8, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">verifyMarketplaceTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:06:56</td>   <td>124797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyMatterManagerLinkTest()[pri:3, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">verifyMatterManagerLinkTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:10:29</td>   <td>337497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyReferralEngineTest()[pri:6, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">verifyReferralEngineTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>18/12/23 09:06:14</td>   <td>82478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyUserNameTest()[pri:2, instance:com.clx.qa.testcases.LauncherTest@3bfdc050]">verifyUserNameTest</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/23 10:39:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ReferralEngineTest.setUp()[pri:0, instance:com.clx.qa.testcases.ReferralEngineTest@42d80b78]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/23 10:40:06</td>   <td>48812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ReferralEngineTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ReferralEngineTest@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/23 10:40:04</td>   <td>47399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReferralEngineTest.verifyReferralEngineTest()[pri:0, instance:com.clx.qa.testcases.ReferralEngineTest@42d80b78]">verifyReferralEngineTest</td> 
+  <td>main@517210187</td>   <td></td> </tr>
 </table>
