Side Bar Test Case Added

--- a/CLXTest/test-output/index.html
+++ b/CLXTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse-214153713\testng-customsuite.xml</span>
+                    <span>C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse-366109065\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.ReferralEngineTest" hash-for-method="verifyReferralEngineTest">verifyReferralEngineTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyLauchPadNotesTest">verifyLauchPadNotesTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyLauchPadSearchTest">verifyLauchPadSearchTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LauncherTest" hash-for-method="verifyUniversalCalendarTest">verifyUniversalCalendarTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +130,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.clx.qa.testcases.ReferralEngineTest</span>
+              <span class="class-name">com.clx.qa.testcases.LauncherTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyReferralEngineTest">
-                  </a> <!-- verifyReferralEngineTest -->
-                  <span class="method-name">verifyReferralEngineTest</span>
+                  <a name="verifyLauchPadNotesTest">
+                  </a> <!-- verifyLauchPadNotesTest -->
+                  <span class="method-name">verifyLauchPadNotesTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLauchPadSearchTest">
+                  </a> <!-- verifyLauchPadSearchTest -->
+                  <span class="method-name">verifyLauchPadSearchTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUniversalCalendarTest">
+                  </a> <!-- verifyUniversalCalendarTest -->
+                  <span class="method-name">verifyUniversalCalendarTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse-214153713\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse-366109065\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +168,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.clx.qa.testcases.ReferralEngineTest&quot;/&gt;
+      &lt;class name=&quot;com.clx.qa.testcases.LauncherTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +208,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyReferralEngineTest')
-data.setCell(0, 2, 'com.clx.qa.testcases.ReferralEngineTest')
-data.setCell(0, 3, 328);
+data.setCell(0, 1, 'verifyLauchPadSearchTest')
+data.setCell(0, 2, 'com.clx.qa.testcases.LauncherTest')
+data.setCell(0, 3, 20222);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyLauchPadNotesTest')
+data.setCell(1, 2, 'com.clx.qa.testcases.LauncherTest')
+data.setCell(1, 3, 20161);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifyUniversalCalendarTest')
+data.setCell(2, 2, 'com.clx.qa.testcases.LauncherTest')
+data.setCell(2, 3, 20149);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 328 ms</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +251,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.clx.qa.testcases.ReferralEngineTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.clx.qa.testcases.LauncherTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyReferralEngineTest</span>
-                <span class="method-start">39282 ms</span>
+                <span class="method-name">verifyLauchPadSearchTest</span>
+                <span class="method-start">35344 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">39612 ms</span>
+                <span class="method-start">55567 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">56292 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyUniversalCalendarTest</span>
+                <span class="method-start">101299 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">121449 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">122160 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyLauchPadNotesTest</span>
+                <span class="method-start">158213 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">178375 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
