--- a/CLXTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/CLXTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62aa67">  <td>18/12/24 02:06:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ReferralEngineTest.setUp()[pri:0, instance:com.clx.qa.testcases.ReferralEngineTest@3e6fa38a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@13329486</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/12/24 02:07:38</td>   <td>39611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ReferralEngineTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ReferralEngineTest@3e6fa38a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@13329486</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/12/24 02:07:37</td>   <td>39281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReferralEngineTest.verifyReferralEngineTest()[pri:0, instance:com.clx.qa.testcases.ReferralEngineTest@3e6fa38a]">verifyReferralEngineTest</td> 
-  <td>main@13329486</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:23:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:24:24</td>   <td>56291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:25:30</td>   <td>122160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LauncherTest.setUp()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:24:23</td>   <td>55566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:25:29</td>   <td>121448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:26:26</td>   <td>178374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LauncherTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:26:06</td>   <td>158212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyLauchPadNotesTest()[pri:11, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">verifyLauchPadNotesTest</td> 
+  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:24:03</td>   <td>35343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyLauchPadSearchTest()[pri:9, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">verifyLauchPadSearchTest</td> 
+  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/12/25 23:25:09</td>   <td>101298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LauncherTest.verifyUniversalCalendarTest()[pri:10, instance:com.clx.qa.testcases.LauncherTest@3e6fa38a]">verifyUniversalCalendarTest</td> 
+  <td>main@517210187</td>   <td></td> </tr>
 </table>
