--- a/CLXTest/test-output/old/Default suite/classes.html
+++ b/CLXTest/test-output/old/Default suite/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.clx.qa.testcases.LauncherTest</td>
+<td>com.clx.qa.testcases.ContactManagerTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLauchPadSearchTest</td>
+<td>validateAddNewContactTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLauchPadNotesTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyUniversalCalendarTest</td>
+<td>verifyContactManagerLogoTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
