New Test Add for Contact

--- a/CLXTest/test-output/index.html
+++ b/CLXTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\CEPL\AppData\Local\Temp\testng-eclipse-801876949\testng-customsuite.xml</span>
+                    <span>C:\Users\CEPL\AppData\Local\Temp\testng-eclipse-1458479288\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.ContactManagerTest" hash-for-method="validateAddNewContactTest">validateAddNewContactTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LoginPageTest" hash-for-method="clxLogoTest">clxLogoTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.ContactManagerTest" hash-for-method="verifyContactManagerLogoTest">verifyContactManagerLogoTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LoginPageTest" hash-for-method="loginPageTitleTest">loginPageTitleTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.clx.qa.testcases.LoginPageTest" hash-for-method="loginTest">loginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +130,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.clx.qa.testcases.ContactManagerTest</span>
+              <span class="class-name">com.clx.qa.testcases.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validateAddNewContactTest">
-                  </a> <!-- validateAddNewContactTest -->
-                  <span class="method-name">validateAddNewContactTest</span>
+                  <a name="clxLogoTest">
+                  </a> <!-- clxLogoTest -->
+                  <span class="method-name">clxLogoTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyContactManagerLogoTest">
-                  </a> <!-- verifyContactManagerLogoTest -->
-                  <span class="method-name">verifyContactManagerLogoTest</span>
+                  <a name="loginPageTitleTest">
+                  </a> <!-- loginPageTitleTest -->
+                  <span class="method-name">loginPageTitleTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginTest">
+                  </a> <!-- loginTest -->
+                  <span class="method-name">loginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\CEPL\AppData\Local\Temp\testng-eclipse-801876949\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\CEPL\AppData\Local\Temp\testng-eclipse-1458479288\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +168,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.clx.qa.testcases.ContactManagerTest&quot;/&gt;
+      &lt;class name=&quot;com.clx.qa.testcases.LoginPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +208,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateAddNewContactTest')
-data.setCell(0, 2, 'com.clx.qa.testcases.ContactManagerTest')
-data.setCell(0, 3, 29672);
+data.setCell(0, 1, 'loginTest')
+data.setCell(0, 2, 'com.clx.qa.testcases.LoginPageTest')
+data.setCell(0, 3, 10777);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyContactManagerLogoTest')
-data.setCell(1, 2, 'com.clx.qa.testcases.ContactManagerTest')
-data.setCell(1, 3, 20063);
+data.setCell(1, 1, 'clxLogoTest')
+data.setCell(1, 2, 'com.clx.qa.testcases.LoginPageTest')
+data.setCell(1, 3, 10358);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'loginPageTitleTest')
+data.setCell(2, 2, 'com.clx.qa.testcases.LoginPageTest')
+data.setCell(2, 3, 10024);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 49 seconds</span>
+              <span class="suite-total-time">Total running time: 31 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,30 +251,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.clx.qa.testcases.ContactManagerTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.clx.qa.testcases.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyContactManagerLogoTest</span>
-                <span class="method-start">71277 ms</span>
+                <span class="method-name">loginPageTitleTest</span>
+                <span class="method-start">16266 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">91343 ms</span>
+                <span class="method-start">26290 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">92030 ms</span>
+                <span class="method-start">27037 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">validateAddNewContactTest</span>
-                <span class="method-start">163842 ms</span>
+                <span class="method-name">clxLogoTest</span>
+                <span class="method-start">40550 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">193516 ms</span>
+                <span class="method-start">50908 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">51616 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">loginTest</span>
+                <span class="method-start">66270 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">77047 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
