--- a/CLXTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/CLXTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eff760">  <td>18/12/27 11:40:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactManagerTest.setUp()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>18/12/27 11:42:10</td>   <td>92029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactManagerTest.setUp()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>18/12/27 11:42:09</td>   <td>91342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactManagerTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>18/12/27 11:43:51</td>   <td>193515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactManagerTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>18/12/27 11:43:21</td>   <td>163841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactManagerTest.validateAddNewContactTest()[pri:2, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">validateAddNewContactTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>18/12/27 11:41:49</td>   <td>71276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactManagerTest.verifyContactManagerLogoTest()[pri:1, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">verifyContactManagerLogoTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:24:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clxLogoTest()[pri:2, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">clxLogoTest</td> 
+  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:24:22</td>   <td>-24284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">loginPageTitleTest</td> 
+  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:25:12</td>   <td>25720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">loginTest</td> 
+  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:24:06</td>   <td>-40550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:24:33</td>   <td>-13512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:24:58</td>   <td>11066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:24:32</td>   <td>-14256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:24:57</td>   <td>10358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/04 03:25:23</td>   <td>36497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
 </table>
